# jens_troels

./: README.md
ConstrainedPickAndPlace/: README.md
ConstrainedPickAndPlace/source/: Gripper.cpp  Gripper.h  Rrt.cpp  Rrt.h  URrobot.cpp  URrobot.h  global_def.h  helpfuncs.cpp  helpfuncs.h  listener.cpp  pose_estimation.cpp  ros_testing.cpp  shp_listener.cpp  tree.cpp  tree.h  ur_caros_example.cpp
LegoPicker/: README.md
LegoPicker/source/: EmergencyStop.cpp  Rest_MiR.py  SubsAndPubs.cpp  SubsAndPubs.h  global_def.h  io_node.cpp  mes.py  modbusClient.py  modbusServer.py  rsdController.cpp  rsdController.h  rsd_logging.cpp  rsd_logging.h  test_node.cpp  test_node_packml.cpp
MotionTracker/: README.md
MotionTracker/source/: Robo.cpp  SamplePlugin.cpp  SamplePlugin.hpp  vision.cpp
SmartGarden/: README.md
SmartGarden/SetupPi/: cmdline.txt  config.txt  rc.local  startup  wpa_supplicant.conf
UAR/: Mathematica functions  README.md  acrobot.py
ai/: README.md  jj_code.py
ai/ai_solver/: CMakeLists.txt  Man.cpp  Man.h  Point.cpp  Point.h  SokobanSolver.cpp  SokobanSolver.h  State.cpp  State.h  hungarian.cpp  hungarian.hpp  main.cpp  sokobanmap_1.txt  sokobanmap_2.txt  sokobanmap_3.txt  sokobanmap_hard.txt
discordbot/: README.md  discord_bot_script.py  leaderboards.json
injector_dll/: README.md  dll_Injector.cpp
